level 2 of css completed
margin 2 div ya box k darmiyan k distance hota hai yeh top,left,right,bottom sb hota
padding: 1 div k andar element k distance hota hai yeh bhi sb hota hai
display: inline: content k braber jaga leta hai, block: poori jaga leta hai, inline-block: margin and padding set krskty haiin yeh same distance leta hai block or inline ka , none se elemeent gayab hojata hai

--- a/CSS practice/styles.css
+++ b/CSS practice/styles.css
@@ -2,18 +2,35 @@
   margin: 0;
   padding: 0;
 }
-.navbar {
-  height: 60px;
-  background-color: black;
+div {
+  display: inline;
   color: white;
 }
-button {
-  background-color: rgb(255, 153, 0);
+.head {
+  display: block;
+  background-color: black;
+  height: 50px;
+  width: auto;
+  padding-top: 10px;
 }
-#logo {
-  color: rgb(255, 153, 0);
-  font-size: 25px;
+.container {
+  margin: 150px;
 }
-a {
-  margin-right: 300px;
+.content {
+  display: inline-block;
+  height: 800px;
+  width: auto;
+}
+.contentitem {
+  color: black;
+  display: inline-block;
+  border: 2px solid black;
+  padding-left: 20px;
+  padding-top: 50px;
+  width: 100px;
+  height: 100px;
+}
+
+p {
+  display: inline;
 }
